# skyiner

./: Dockerfile  README.md  main.py  pyproject.toml  test_main.py
access/: role.yaml  rolebinding.yaml
deploy/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
